# candle-layer-norm

./: Cargo.toml  README.md  build.rs
kernels/: ln.h  ln_api.cpp  ln_api.cu  ln_utils.cuh
src/: lib.rs
